--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,11 @@ body {
 	background-color: #121214;
 	font-family: 'Roboto', sans-serif;
 	overflow: hidden;
+
+	-webkit-user-select: none; /* Chrome all / Safari all */
+	-moz-user-select: none; /* Firefox all */
+	-ms-user-select: none; /* IE 10+ */
+	user-select: none;
 }
 
 .container {
